Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64669

Bluez LE command queue blocked when Gatt timeout occurs

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.4
    • 5.9.3
    • None

    Description

      This block may happen when the following warning appears:

      qt.bluetooth.bluez: ****** Request type 0xa to server/peripheral timed out
      qt.bluetooth.bluez: ****** Looks like the characteristic or descriptor does NOT act in accordance to Bluetooth 4.x spec.
      qt.bluetooth.bluez: ****** Please check server implementation. Continuing under reservation.
      

      The timeout itself indicates that the remote peripheral device is not responding to a command. It is a strong indicator that the remote peripheral is not responding as per ATT spec. QtBluetooth uses the timeout to skip the last failed command and should continue with the next ATT command. Unfortunately it does not always continue (depending on the type of the last command) which manifests itself as a hanging QLowEnergyController instance.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ablasche Alex Blasche
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes