src/bluetooth/qlowenergycontroller_bluez.cpp
@@ -346,8 +346,8 @@ void QLowEnergyControllerPrivate::handleGattRequestTimeout()
     }
 
     if (!openRequests.isEmpty() && requestPending) {
-        requestPending = false; // reset pending flag
         const Request currentRequest = openRequests.dequeue();
+        requestPending = false; // reset pending flag
 
         qCWarning(QT_BT_BLUEZ).nospace() << "****** Request type 0x" << hex << currentRequest.command
                            << " to server/peripheral timed out";
@@ -372,7 +372,6 @@ void QLowEnergyControllerPrivate::handleGattRequestTimeout()
         case ATT_OP_EXCHANGE_MTU_REQUEST:  // MTU change request
             // never received reply to MTU request
             // it is safe to skip and go to next request
-            sendNextPendingRequest();
             break;
         case ATT_OP_READ_BY_GROUP_REQUEST: // primary or secondary service discovery
         case ATT_OP_READ_BY_TYPE_REQUEST:  // characteristic or included service discovery
@@ -406,8 +405,13 @@ void QLowEnergyControllerPrivate::handleGattRequestTimeout()
             break;
         default:
             // not a command used by central role implementation
-            return;
+            qCWarning(QT_BT_BLUEZ) << "Missing response for ATT peripheral command: "
+                                   << hex << command;
+            break;
         }
+
+        // spin openRequest queue further
+        sendNextPendingRequest();
     }
 }
 
